--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "symongroup/opencart-sdk",
+  "name": "symongroup/opencart",
   "description": "Open Cart API",
   "type": "package",
   "license": "MIT",
